# My_learning

./: .gitignore
Reduction_roofline/: CMakeLists.txt  Makefile  main.cu
Reduction_roofline/headers/: helpers.cuh  kernels.cuh
Reduction_roofline/src/: CMakeLists.txt  main.cpp
bandwidthtest/: CMakeLists.txt  main.cu  test.cu
coopgroups/: CMakeLists.txt  README.md  main.cpp
cudadoublestest/: Makefile  test.cu
cudampisynctest/: Makefile  test.cu
cudastreams/: main.cu  report1.nsys-rep
matrixmarketparallel/: CMakeLists.txt  benchmark.sh  main.cpp
matrixtranspose/: CMakeLists.txt  main.cpp
matrixtranspose/header/: helpers.cuh  kernels.cuh
